fixed addEvent spacing

--- a/Homepage/index-style.css
+++ b/Homepage/index-style.css
@@ -88,7 +88,7 @@ body {
     width:800px;
     height:600px;
     position: relative;
-    top:-300px;
+    top:-650px;
     flex-direction: column;
 }
 
